try to fix class loader problem for quarkus